# shortswamp

./: .gitignore  manage.py  pyproject.toml
shorten/: models.py
shorten/migrations/: 0001_initial.py
shortswamp/: asgi.py  settings.py  urls.py  wsgi.py
utils/: wal.sql
